Add adaptive cards for button interface during triage

--- a/DogBot/DogBot/settings/appsettings.json
+++ b/DogBot/DogBot/settings/appsettings.json
@@ -31,8 +31,7 @@
     "name": "DogBot"
   },
   "MicrosoftAppId": "",
-  "publishTargets": [
-  ],
+  "publishTargets": [],
   "qna": {
     "hostname": "",
     "knowledgebaseid": "",
@@ -61,7 +60,7 @@
       "allowedCallers": []
     },
     "storage": "",
-    "blobContainerUri": "",
+    "blobContainerUri": "https://seeb3storage.blob.core.windows.net/transcripts",
     "telemetry": {
       "logActivities": true,
       "logPersonalInformation": false,
