Added AOAI for fun

--- a/azure-bot-clearstep-integration/appsettings.json
+++ b/azure-bot-clearstep-integration/appsettings.json
@@ -6,5 +6,10 @@
   "ClearStep": {
     "BaseUrl": "",
     "ApiKey": ""
+  },
+  "AzureOpenAI": {
+    "BaseUrl": "",
+    "Deployment": "",
+    "TenantId":  ""
   }
 }
